cmake_minimum_required(VERSION 3.19)
project(Interview)

set(CMAKE_CXX_STANDARD 14)

add_executable(Interview main.cpp arrayProblems/sumOfTwoArrayElement.cpp arrayProblems/sumOfTwoArrayElement.h arrayProblems/longestSubArrayBySum.cpp arrayProblems/longestSubArrayBySum.h dymaicProblems/fibonacci.cpp dymaicProblems/fibonacci.h arrayProblems/maxConsecutiveSum2.h arrayProblems/maxConsecutiveSum2.cpp dymaicProblems/gridTraveler.cpp dymaicProblems/gridTraveler.h)